# emcee_simulation

./: LICENSE  README.md  rosconsole.config
emcee_control/: CMakeLists.txt  package.xml
emcee_control/config/: .ranges.txt  controllers.yaml  emcee_control.yaml  emcee_localization.yaml  ps3_joy.yaml  xbox_joy.yaml
emcee_control/launch/: control.launch  drive.launch  joy_teleop.launch
emcee_control/src/: joy_teleop.cpp
emcee_description/: CMakeLists.txt  package.xml
emcee_description/blender/: arms.blend  arms.blend1  arms_simple.blend  arms_simple.blend1  bucket.blend  bucket.blend1  bucket_simple.blend  bucket_simple.blend1  laser.blend  laser.blend1  sensor_post.blend  sensor_post.blend1  sled_simple.blend  sled_simple.blend1  wheel.blend  wheel.blend1
emcee_description/launch/: display.launch  gazebo.launch
emcee_description/meshes/arena/: nasa_minimal.dae
emcee_description/meshes/collision/: arms_simple.dae  bucket_simple.dae  sled_simple.dae
emcee_description/meshes/raw/: arms.STL  bucket.STL  laser.STL  sensor_post.STL  sled.STL  wheel.STL
emcee_description/meshes/visual/: arms.dae  bucket.dae  laser.dae  sensor_post.dae  wheel.dae
emcee_description/rviz/: urdf.rviz
emcee_description/scripts/: urdf_edit.py
emcee_description/urdf/: emcee.gazebo  emcee.urdf  emcee.urdf.xacro
emcee_description/worlds/: README.md  nasa_arena.world  nasa_arena_dirt.world  nasa_minimal.world  play.world
emcee_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
emcee_moveit_generated/config/: emcee.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
emcee_moveit_generated/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
emcee_navigation/: CMakeLists.txt  package.xml
emcee_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
emcee_navigation/launch/: command_robot.launch  move_base.launch  robot_components.launch  rtabmap.launch
emcee_navigation/param/: costmap_common_params.yaml  dummy.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params.yaml.save  local_costmap_params.yaml  move_base_params.yaml  move_base_params.yaml.save
emcee_navigation/scripts/: robot-driver.py
emcee_navigation/src/: robot_driver.cpp
