<?xml version="1.0"?>
<package>
  <name>emcee_control</name>
  <version>0.0.0</version>
  <description>The emcee_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mattwilsonmbw@gmail.com">Matthew Wilson</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <url type="website">http://urmp-gazebo.readthedocs.io</url>


  <author email="mattwilsonmbw@gmail.com">Matthew Wilson</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_localization</run_depend>



    <export>
      <!-- gazebo_ros_paths_plugin automatically adds these to
          GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
          the package.xml file. You can than use URIs of type model://my_package/stuff. -->
      <gazebo_ros
          gazebo_plugin_path="${prefix}/lib"
          gazebo_model_path="${prefix}/.." />
    </export>
</package>
